[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "keystone-engine"
version = "0.9.2"
description = "Keystone assembler engine"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "Nguyen Anh Quynh", email = "aquynh@gmail.com"},
]
maintainers = [
    {name = "Nguyen Anh Quynh", email = "aquynh@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Security",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://www.keystone-engine.org"
Repository = "https://github.com/keystone-engine/keystone"
Documentation = "https://www.keystone-engine.org/docs/"
"Bug Tracker" = "https://github.com/keystone-engine/keystone/issues"

[tool.setuptools]
packages = ["keystone"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
keystone = [
    "*.py",
    "*.so",
    "*.so.*",
    "*.dylib", 
    "*.dll",
    "lib*",
]